--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ env:
 
 before_install:
   - go get -v golang.org/x/lint/golint
-  - wget https://download.pytorch.org/libtorch/cpu/libtorch-cxx11-abi-shared-with-deps-1.5.1%2Bcpu.zip
-  - unzip libtorch-cxx11-abi-shared-with-deps-1.5.1+cpu.zip
-  - sudo mv libtorch /opt
+  - wget -O /tmp/libtorch-cxx11-abi-shared-with-deps-1.5.1+cpu.zip https://download.pytorch.org/libtorch/cpu/libtorch-cxx11-abi-shared-with-deps-1.5.1%2Bcpu.zip
+  - unzip /tmp/libtorch-cxx11-abi-shared-with-deps-1.5.1+cpu.zip
+  - sudo mv /tmp/libtorch /opt
   - LD_LIBRARY_PATH=/opt/libtorch/lib:${LD_LIBRARY_PATH}
 script:
   - go test -v github.com/sugarme/gotch/tensor
