--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ libtch/fake_cuda_dependency.cpp
 libtch/dummy_cuda_dependency.cpp
 libtch/fake_cuda_dependency.cpp.cpu
 libtch/lib.go.cpu
+libtch/lib.go
