--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,9 @@ dist: bionic
 
 before_install:
   - sudo apt-get install clang-tools-9
-
-  - GOTCH_VERSION="${GOTCH_VER:-v0.1.7}"
+  - GOTCH="$HOME/sugarme/gotch"
   - LIBTORCH_VERSION="${LIBTORCH_VER:-1.5.1}"
-  - GOTCH="$GOPATH/pkg/mod/github.com/sugarme/gotch@$GOTCH_VERSION"
-  - LIBTORCH="$GOPATH/pkg/mod/github.com/sugarme/gotch@$GOTCH_VERSION/libtch/libtorch"
+  - LIBTORCH="$GOTCH/libtch/libtorch"
   - LIBRARY_PATH="$LIBTORCH/lib"
   - CPATH="$LIBTORCH/lib:$LIBTORCH/include:$LIBTORCH/include/torch/csrc:$LIBTORCH/include/torch/csrc/api/include"
   - LD_LIBRARY_PATH="$LIBTORCH/lib"
@@ -31,7 +29,7 @@ before_install:
 
   # Update .bashrc
   - FILE="$HOME/.bashrc"
-  - LN_LIBTORCH="export LIBTORCH=$GOPATH/pkg/mod/github.com/sugarme/gotch@$GOTCH_VERSION/libtch/libtorch"
+  - LN_LIBTORCH="export LIBTORCH=$GOTCH/libtch/libtorch"
   - LN_LIBRARY_PATH="export LIBRARY_PATH=$LIBTORCH/lib"
   - LN_CPATH="export CPATH=$LIBTORCH/lib:$LIBTORCH/include:$LIBTORCH/include/torch/csrc:$LIBTORCH/include/torch/csrc/api/include"
   - LN_LD_LIBRARY_PATH="export LD_LIBRARY_PATH=$LIBTORCH/lib:$LD_LIBRARY_PATH"
