--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,16 @@ before_install:
   - export LIBRARY_PATH=${LIBTORCH}/lib
   - export CPATH=${LIBTORCH}/lib:${LIBTORCH}/include:${LIBTORCH}/include/torch/csrc:${LIBTORCH}/include/torch/csrc/api/include
   - export LD_LIBRARY_PATH=${LIBTORCH}/lib
+  - export CUDA_VER=cpu && 
+
+    wget https://raw.githubusercontent.com/sugarme/gotch/master/setup-libtorch.sh
+    chmod +x setup-libtorch.sh
+
 
   # Precompiled libtorch
   - sudo rm -rf $LIBTORCH
   - sudo mkdir -p $LIBTORCH
+  - bash setup-libtorch.sh
   - wget -O /tmp/libtorch-cxx11-abi-shared-with-deps-${LIBTORCH_VERSION}+cpu.zip https://download.pytorch.org/libtorch/cpu/libtorch-cxx11-abi-shared-with-deps-${LIBTORCH_VERSION}%2Bcpu.zip
   - sudo unzip /tmp/libtorch-cxx11-abi-shared-with-deps-${LIBTORCH_VERSION}+cpu.zip -d ${GOTCH}/libtch
   - sudo rm ${GOTCH}/libtch/lib.go
